# vacation_planner

./: Cargo.toml  README.md  build.rs  requirements.txt  vacation_planner.py
gui/: CMakeLists.txt  gui.cpp  gui.h
gui/.cache/clangd/index/: gui.cpp.B9E4DA1FB594AC06.idx  gui.h.3527116F22A99474.idx
gui/res/: Planner.qml  res.qrc  util.js
res/: Month.qml  Planner.qml  PlanningCalendar.qml
src/: algo.rs  api.rs  error.rs  gui.rs  lib.rs  main.rs
vacation_planner/: Cargo.toml
vacation_planner/res/: Month.qml
vacation_planner/src/: algo.rs  api.rs  error.rs  lib.rs  main.rs
